--- a/app/src/main/res/layout/tabhost.xml
+++ b/app/src/main/res/layout/tabhost.xml
@@ -31,14 +31,14 @@
                     android:id="@+id/tab2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"></LinearLayout>
+                    android:orientation="horizontal"/>
 
             </FrameLayout>
 
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></TabWidget>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </TabHost>
 
