--- a/app/src/main/res/layout/select.xml
+++ b/app/src/main/res/layout/select.xml
@@ -2,7 +2,7 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
-    android:background="#FFC105"
+    android:background="@color/background"
     android:orientation="vertical" >
 
     <TextView
