--- a/app/src/main/res/layout/activity_tabhost.xml
+++ b/app/src/main/res/layout/activity_tabhost.xml
@@ -17,7 +17,7 @@
             <!-- 광고 배너 -->
             <com.google.android.gms.ads.AdView
                     android:id="@+id/adView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_alignParentBottom="true"
