--- a/app/src/main/res/layout/tabhost.xml
+++ b/app/src/main/res/layout/tabhost.xml
@@ -13,5 +13,5 @@
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id_for_test"/>
+        ads:adUnitId="@string/admob_ad_id"/>
 </LinearLayout>
