--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/background"
-    android:orientation="vertical"
-    android:weightSum="10" >
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ViewFlipperActivity">
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="9"
-        android:src="@drawable/title" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/background"
+        android:orientation="vertical"
+        android:weightSum="10">
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:src="@drawable/title" />
 
-    <Button
-        android:id="@+id/buttonStart"
-        android:layout_width="162dp"
-        android:layout_height="54dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="18dp"
-        android:layout_weight="1"
-        android:background="@drawable/selector"
-        android:text="@string/start" />
-
-</LinearLayout>
+        <Button
+            android:id="@+id/buttonStart"
+            android:layout_width="162dp"
+            android:layout_height="54dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="18dp"
+            android:layout_weight="1"
+            android:background="@drawable/selector"
+            android:text="@string/start" />
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
